--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -109,7 +109,7 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-2 col-form-label">In Words<span style="color: black">*</span></label>
                                                     <div class="col-sm-10">
-                                                        @Html.TextBoxFor(m => m.word, new { @class = "form-control", @style = "font-weight:800;color:#282323;", @placeholder = "Amount in words", @disabled = "true" })
+                                                        @Html.TextBoxFor(m => m.word, new { @class = "form-control", @style = "font-weight:400;color:#8a8b91;", @placeholder = "Amount in words", @disabled = "true" })
 
 
                                                     </div>
