--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -6,7 +6,6 @@
 }
 
 
-
 @using (Html.BeginForm("RetopUpAction", "Accounts", FormMethod.Post, new { @id = "form1" }))
 {
     
@@ -45,9 +44,17 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                            <div class="col-md-6">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">Reward<span style="color: red">*</span></label>
+                                                    <div class="col-sm-9">
+                                                        <input type="radio" name="rdbtypename" onclick="return showdetails('IsInclude')" value="IsInclude" /> Is Include
+                                                        <input type="radio" name="rdbtypename" onclick="return showdetails('NotInclude')" value="NotInclude" /> Not Include
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
-
-
 
                                         <div class="row">
                                             <div class="col-md-4">
@@ -347,6 +354,21 @@
             alert("Please Select TopUp Type");
             return false;
         }
+
+
+        var status = $("input[name='rdbtypename']:checked").val();
+
+        if (status == "IsInclude") {
+
+        }
+        else if (status == "NotInclude") {
+
+        }
+        else {
+            alert("Please Select Reward");
+            return false;
+        }
+
 
         if ($('#ToLoginID').val() == '') {
             $("#ToLoginID").addClass('errortext');
