--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -49,9 +49,10 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Reward<span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                        <input type="radio" name="rdbtypename" onclick="return showdetails('IsInclude')" value="IsInclude" /> Is Include
-                                                        <input type="radio" name="rdbtypename" onclick="return showdetails('NotInclude')" value="NotInclude" /> Not Include
+                                                        <input type="radio" name="rdbtypename" onclick="return showdetailsreward('IsInclude')" value="IsInclude" /> Is Include
+                                                        <input type="radio" name="rdbtypename" onclick="return showdetailsreward('NotInclude')" value="NotInclude" /> Not Include
                                                     </div>
+                                                    @Html.HiddenFor(m => m.Reward)
                                                 </div>
                                             </div>
                                         </div>
@@ -314,6 +315,29 @@
         }
 
     }
+    function showdetailsreward(type) {
+        if (type == "IsInclude") {
+            //$('#divisite').hide();
+            //$('#divblock').hide();
+            //$('#divsector').hide();
+            //$('#divplot').hide();
+            //$('#divpackage').show();
+            $('#Reward').val('IsInclude');
+
+        }
+        else if (type == "NotInclude") {
+            //$('#divisite').hide();
+            //$('#divblock').hide();
+            //$('#divsector').hide();
+            //$('#divplot').hide();
+            //$('#divpackage').show();
+            $('#Reward').val('NotInclude');
+        }
+        else {
+            $('#Reward').val('NotInclude');
+        }
+
+    }
     function isNumberKey(evt) {
         var charCode = (evt.which) ? evt.which : event.keyCode;
         if (charCode != 46 && charCode > 31
@@ -356,12 +380,12 @@
         }
 
 
-        var status = $("input[name='rdbtypename']:checked").val();
+        var rewardstatus = $("input[name='rdbtypename']:checked").val();
 
-        if (status == "IsInclude") {
+        if (rewardstatus == "IsInclude") {
 
         }
-        else if (status == "NotInclude") {
+        else if (rewardstatus == "NotInclude") {
 
         }
         else {
