--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -36,10 +36,10 @@
                                             <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Topup Type <span style="color: red">*</span></label>
-                                                    <div class="col-sm-9" style="display:none">
+                                                    @*<div class="col-sm-9" style="display:none">
                                                             <input type="radio" id="rdb_type" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
                                                             <input type="radio" id="rdb_type" name="rdbtype" onclick="return showdetails('Product')" /> Product
-                                                        </div>
+                                                        </div>*@
                                                     <div class="col-sm-9">
                                                         <input type="radio"  name="rdbtype" onclick="return showdetails('NewBusiness')" value="NewBusiness"/> New Business
                                                         <input type="radio"  name="rdbtype" onclick="return showdetails('OtherBusiness')"  value="OtherBusiness"/> Other Business
@@ -50,14 +50,15 @@
                                             <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Reward<span style="color: red">*</span></label>
-                                                    <div class="col-sm-9" style="display:none">
+                                                    @*<div class="col-sm-9" style="display:none">
                                                         <input type="radio" id="rdb_type" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
                                                         <input type="radio" id="rdb_type" name="rdbtype" onclick="return showdetails('Product')" /> Product
-                                                    </div>
+                                                    </div>*@
                                                     <div class="col-sm-9">
-                                                        <input type="radio" name="rdbtypename" onclick="return showdetails('IsInclude')" value="IsInclude" /> Is Include
-                                                        <input type="radio" name="rdbtypename" onclick="return showdetails('NotInclude')" value="NotInclude" /> Not Include
+                                                        <input type="radio" name="rdbtypename" onclick="return showdetailsreward('IsInclude')" value="IsInclude" /> Is Include
+                                                        <input type="radio" name="rdbtypename" onclick="return showdetailsreward('NotInclude')" value="NotInclude" /> Not Include
                                                     </div>
+                                                    @Html.HiddenFor(m => m.Reward)
                                                 </div>
                                             </div>
 
@@ -72,7 +73,7 @@
                                                         @Html.TextBoxFor(m => m.ToLoginID, new { @class = "form-control", @Placeholder = "Login Id", @onchange = "getmembername(this);" })
                                                         @Html.HiddenFor(m => m.LoginId)
                                                         <br />
-                                                        <span id="txtname" style="color: #fff"></span>
+                                                        <span id="txtname" style="color: black"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -405,12 +406,11 @@
             return false;
         }
 
-        var status = $("input[name='rdbtypename']:checked").val();
-
-        if (status == "IsInclude") {
+        var rewardstatus = $("input[name='rdbtypename']:checked").val();
+        if (rewardstatus == "IsInclude") {
 
         }
-        else if (status == "NotInclude") {
+        else if (rewardstatus == "NotInclude") {
 
         }
         else {
@@ -555,7 +555,29 @@
         }
 
     }
+    function showdetailsreward(type) {
+        if (type == "IsInclude") {
+            //$('#divisite').hide();
+            //$('#divblock').hide();
+            //$('#divsector').hide();
+            //$('#divplot').hide();
+            //$('#divpackage').show();
+            $('#Reward').val('IsInclude');
 
+        }
+        else if (type == "NotInclude") {
+            //$('#divisite').hide();
+            //$('#divblock').hide();
+            //$('#divsector').hide();
+            //$('#divplot').hide();
+            //$('#divpackage').show();
+            $('#Reward').val('NotInclude');
+        }
+        else {
+            $('#Reward').val('NotInclude');
+        }
+
+    }
     function validateReceipt() {
         //$("#Fk_CityId").empty();
         var ReceiptNo = "";
